Fixed whitespace to me more readable

--- a/LulusEatery/CSS_SCSS/BaseStyle.scss
+++ b/LulusEatery/CSS_SCSS/BaseStyle.scss
@@ -10,60 +10,69 @@ $textColor:#000000;
 
 
 /* Reset Styles */
-html {
+html
+{
 	font-size: 16px;
 }
 
 a, article, body, div, footer, header, h1, audio, h2, h3,
 img, li, nav, p, section, ul, fieldset, form, input,
-label, legend, textarea {
+label, legend, textarea
+{
 	border: 0;
 	padding: 0;
 	margin: 0;
 }
 
-body {
+body
+{
 	background-color:$backColor;
 	color:$textColor;
 	font-family: Verdana,Arial,sans-serif;
 }
 
-header {
+header
+{
 	padding-top:2em;
 	text-align:center;
 	color: #43A554;
 }
 
-h2 {
+h2
+{
 	padding-bottom: 15px;
 }
 
 
-a:link {
+a:link
+{
 	color: #6D6D6D;
 	text-decoration:none; /* hyperlinks are usally underlined do we want to change this? */
 }
 
-a:hover {
+a:hover
+{
 	color: #FF6A00;
 }
 
-a:active {
+a:active
+{
 	color: #4CFF00;
 }
 
-a:visited {
+a:visited
+{
 	color: #6D6D6D;
 }
 
 /* Possibly make the border thicker I'll have to play around with it */
-hr {
-	.menu {
-		border: 5px solid $textColor;
-	}
+hr
+{
+	border: 5px solid $textColor;
 }
 
-footer {
+footer
+{
 	font-size: 14px;
 	text-align: center;
 	text-decoration: none;
@@ -71,7 +80,8 @@ footer {
 }
 
 
-.fa {
+.fa
+{
 	padding: 20px;
 	font-size: 30px;
 	width: 50px;
@@ -80,20 +90,25 @@ footer {
 	margin: 5px 2px;
 }
 
-.fa:hover {
+.fa:hover
+{
 	opacity: 0.7;
 }
 
-.fa-facebook {
+.fa-facebook
+{
 	background: #3B5998;
 	color: white;
 }
 
-.fa-instagram {
+.fa-instagram
+{
 	background: #125688;
 	color: white;
 }
-.container {
+
+.container
+{
 	/* Max-width 1920px */
 	margin: 0 auto;
 	position: relative;
@@ -103,12 +118,11 @@ footer {
 	background-size: cover;
 }
 
-.container2 {
+.container2
+{
 	max-width: 800px;
 	margin: 0 auto;
 	position: relative;
 	background-color: $backColor;
 	min-height: 100vh;
 }
-
-
