--- a/LulusEatery/CSS_SCSS/Menu.scss
+++ b/LulusEatery/CSS_SCSS/Menu.scss
@@ -1,30 +1,33 @@
-.menuname {
+.menuname
+{
 	color: green;
 	font-weight: bold;
 }
 
-.menukey {
+.menukey
+{
 	text-align: right;
 }
 
-.menudesc {
+.menudesc
+{
 	padding-bottom: 1em;
 }
 
-.gl {
+.gl
+{
 	color: #C284C9;
 	font-weight: bold;
 }
 
-.sf {
+.sf
+{
 	color: #5EB2D6;
 	font-weight:bold;
 }
 
-.nf {
+.nf
+{
 	color: #FFD468;
 	font-weight: bold;
 }
-
-
-
