--- a/LulusEatery/CSS_SCSS/Pingpong.scss
+++ b/LulusEatery/CSS_SCSS/Pingpong.scss
@@ -1,10 +1,12 @@
-.pingpongimages {
+.pingpongimages
+{
 	border: 0;
 	padding: 0;
 	margin: 0;
 	padding-top: 1em;
 
-	img {
+	img
+	{
 		width: 32%;
 		padding: 3px;
 	}
